--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.supremo</groupId>
 	<artifactId>healthcare</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>healthcare</name>
 	<description>Health Care App</description>
 	<properties>
