--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=${PORT:8080}
 #spring.datasource.hikari.connectionTimeout=20000
 #spring.datasource.hikari.maximumPoolSize=5
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 ## PostgreSQL Local
 #spring.datasource.url=jdbc:postgresql://localhost:5432/HealthCare
 #spring.datasource.username=postgres
@@ -17,5 +19,8 @@ spring.datasource.password=28ecbf45eb6164dfddf9dbda3ffc0e5fcfc0b28d9be9db357ea9f
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+# Hibernate
+#spring.jpa.database=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
