Basic Starting Authentication code addition, added dependency and added credentials in application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=${PORT:8080}
 
+spring.security.user.name=satnam
+spring.security.user.password=waheguru
+
 ## default connection pool
 #spring.datasource.hikari.connectionTimeout=20000
 #spring.datasource.hikari.maximumPoolSize=5
